# DropletSimulation

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cu
include/: Camera.h
resource/: DPhPC_area.txt  DPhPC_diameter.txt  DPhPC_pos_x.txt  DPhPC_pos_y.txt  PB_PEO_diameter.txt  PB_PEO_pos_x.txt  PB_PEO_pos_y.txt
src/: CMakeLists.txt  CudaClass.cu  CudaClass.h  PhysicsCore.cpp  PhysicsCore.h  SimParams.h  SimParams_GPU.cu  SimParams_GPU.h  colorBar.h  dropletsSimCore.cpp  dropletsSimCore.h  dropletsSimCore_GPU.cu  dropletsSimCore_GPU.h  dropletsSimObjects.cpp  dropletsSimObjects.h  dropletsSimObjects_GPU.cu  dropletsSimObjects_GPU.h  mesh.h  openGLText.h  shader.cpp  shader.h  visualizer.h
